--- a/style.css
+++ b/style.css
@@ -1,35 +1,46 @@
 .int{
     top: 0;
 } 
-nav{
-    top: 0;
-    background-color: white;
-    height: 70px;
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    position: -webkit-sticky; /* Safari */
     position: sticky;
-    width: 100%;
-    
-} 
-nav ul li {
-  display: inline-block;
-  margin-right: 15%;
-  margin-top: 1.5%;
-  color: #F3E7F8;
-  float: right;
-}
-nav ul li:hover {
-  background: #E4F1FE;
-  color: green;
-}
-#welcome-section{
     top: 0;
+  }
+  
+  li {
+    float: right;
+    padding-right: 5%;
+  }
+  
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  li a:hover {
+    background-color: #111;
+  }
+  
+  .active {
+    background-color: #4CAF50;
+  }
+
+#welcome-section{
+  top: 0;
   height: 100vh;
-  //overflow: auto;
   background-color: #F2E7F7;
 }
 .avtar{
-  height: 200px;
-  width: 200px;
-  border-radius: 100px;
+  border-radius: 100%;
 }
 .flex-container{
   display: flex;
@@ -38,21 +49,22 @@ nav ul li:hover {
   height: 100vh;
   flex-direction: column;
 }
-.flex-two{
-  display: flex;
-  flex-direction: row;
-  align-items:center;
-  justify-content: center;
-  height: 100vh;
-  background-color: #C2F9A4;
 
-}
+
 h4{
   text-align: center;
 }
 @media screen and (min-width: 600px) {
   div.example {
     font-size: 80px;
+  }
+  .flex-two{
+    display: flex;
+    height: 30vh;
+    background-color: #C2F9A4;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
   }
 }
 
@@ -62,11 +74,10 @@ h4{
   }
 }
 .project-tile{
+  flex:1;
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
-  margin: 4%;
 }
 .thumb{
   height: 200px;
@@ -77,7 +88,7 @@ h4{
   flex-direction: row;
   align-items:center;
   justify-content: center;
-  height: 50vh;
+  height: 100vh;
   background-color: #C2F9A4;
 
 }
