--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
-.int{
+/* .int{
     top: 0;
-} 
+}  */
 
+#navbar{
+  top: 0;
+  background-color: #1a659e;
+}
 ul {
     list-style-type: none;
     margin: 0;
@@ -37,7 +41,7 @@ ul {
 #welcome-section{
   top: 0;
   height: 100vh;
-  background-color: #F2E7F7;
+  background-color: #004e89;
 }
 .avtar{
   border-radius: 100%;
