--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ body{
     display: flex;
     padding-top: 50px;
     padding: 40px;
-    color: white;
+    color: black;
     justify-content: center;
     align-items: center;
   }
