--- a/style.css
+++ b/style.css
@@ -1,10 +1,20 @@
 body{
   background-color: pink;
   margin:0;
-
+}
+.brand{
+  float: left !important;
+  font-size: x-large !important;
+}
+.links{
+  font-size: large !important;
 }
 #navbar{
-  background-color: #004e89;
+  background-color: #3b10c1;
+  height: 90px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 }
   ul {
     list-style-type: none;
@@ -15,12 +25,8 @@ body{
     position: -webkit-sticky; 
     position: sticky;
   }
-  .white{
-    color: white
-  }
   li {
-    float: right;
-    padding-right: 5%;
+    padding-right: 1%;
   }
   
   li a {
@@ -31,13 +37,19 @@ body{
   }
   
   li a:hover {
-    background-color: yellowgreen;
+    background-color: white;
   }
 
+  li a:active{
+    background-color: palegreen;
+  }
   #welcome-section{
     margin-top:0;
     display: flex;
     height: 100vh;
+  }
+  .white{
+    color: white;
   }
   #contact{
     display: flex;
@@ -48,13 +60,23 @@ body{
     justify-content: center;
     align-items: center;
   }
+  #publications{
+      display: flex;
+      height: 100vh;
+      padding: 20px;
+      background-color: #efefd0;
+      color: black;
+      justify-content: flex-start;
+      align-items: center;
+    
+  }
   #profiles{
     display: flex;
     flex-direction: row;
     align-items:center;
     justify-content: center;
     height: 50vh;
-    background-color: #efefd0;
+    background-color:  #004e89;
   
   }
   
@@ -66,7 +88,7 @@ body{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   }
   #projects{
-    height: 100vh;
+    height: 120vh;
     background-color: #038989;
     display: flex;
     padding-top: 50px;
