--- a/style.css
+++ b/style.css
@@ -172,15 +172,18 @@ body{
       padding: 20px;
       background-color: white;
       color: black;
-      justify-content: flex-start;
-      align-items: center;
   }
   #profiles{
+    background-color:rgba(9,9,121,1); 
+    width: 100%;
+    height: 50vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .cont{
     display: flex;
     flex-direction: row;
-    height: 50vh;
-    background-color:rgba(9,9,121,1); 
-  
   }
   .p1{
     flex:1;
@@ -190,7 +193,11 @@ body{
     justify-content: center;
   }
   .p2{
-    flex:1;
+    flex:2;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
   }
   .text{
     padding: 20px;
