--- a/style.css
+++ b/style.css
@@ -172,11 +172,13 @@ body{
       padding: 20px;
       background-color: white;
       color: black;
+      align-items: center;
+      justify-content: center;
   }
   #profiles{
     background-color:rgba(9,9,121,1); 
     width: 100%;
-    height: 50vh;
+    height: 700px;
     display: flex;
     align-items: center;
     justify-content: center;
