--- a/style.css
+++ b/style.css
@@ -112,6 +112,16 @@ body{
 .links{
   font-size: large !important;
 }
+.btn{
+  background-color: rgba(255,255,255,0.3);
+  color: white;
+  padding: 3%;
+  width: 120px;
+}
+/* .btn a{
+  background-color: rgba(255, 255, 255, 0.4);
+  color: white;
+} */
 #navbar{
   /* background-color: transparent; */
 
