--- a/style.css
+++ b/style.css
@@ -103,11 +103,10 @@ body{
     opacity: 0;
   }
 }
-
-
 .brand{
-  float: left !important;
-  font-size: x-large !important;
+  font-size: x-large;
+  color: #ffffff;
+  letter-spacing: 0.2em;
 }
 .links{
   font-size: large !important;
@@ -125,7 +124,7 @@ body{
 #navbar{
   /* background-color: transparent; */
 
-  background-color: rgba(0,0,0,0.3);
+  background-color: rgba(0,0,0,0.0);
   height: 90px;
   display: flex;
   align-items: center;
@@ -189,7 +188,7 @@ body{
   #profiles{
     background-color:wheat; 
     width: 100%;
-    height: 700px;
+    height:40%;
     display: flex;
     align-items: center;
     justify-content: flex-end;
@@ -213,7 +212,7 @@ body{
     justify-content: center;
   }
   .text{
-    padding: 20px;
+    /* padding: 20px; */
   }
   .t{
     font-size: medium;
@@ -274,7 +273,7 @@ body{
    @media screen and (min-width: 600px) {
     #navbar li a {
       font-size: 20px;
-      padding: 30px;
+      /* padding: 30px; */
     }
     .card-columns {
       column-count: 3;
@@ -294,11 +293,14 @@ body{
       align-items: center;
       justify-content: center;
       display: flex;
-      flex: 1;  
+      flex: 0.75;  
+      height: 80%;
+      width: 80%;
+      background-color: thistle;
       border-radius: 100%;
     }
     #profile-link{
-        margin: 4%;
+        /* margin: 4%; */
     }
   }
   
