--- a/style.css
+++ b/style.css
@@ -246,15 +246,19 @@ body{
     /* height:30vh; */
     padding: 3%;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
   }
   .cont{
-    width: 60%;
+    width: 40%;
+    /* background-color: coral; */
+    margin-bottom: 2%; 
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
+
   }
  
   .text{
