--- a/style.css
+++ b/style.css
@@ -243,6 +243,7 @@ body{
   #profiles{
     bottom: 0;
     width: 100%;
+    margin-top: 3%;
     /* height:30vh; */
     padding: 3%;
     display: flex;
