--- a/style.css
+++ b/style.css
@@ -362,8 +362,8 @@ body{
   
   @media screen and (max-width: 600px) {
     .wrapper2{
-      height: 100vh;
-      width: 100vw;
+      /* height: 100vh;
+      width: 100vw; */
       font-size: 10px;
       display: flex;
       align-items: flex-start;
