--- a/style.css
+++ b/style.css
@@ -18,13 +18,16 @@ body{
 } */
 .wrapper2{
   width: 100%;
-  height: 100vh;
+  /* height: 100vh; */
   /* background: linear-gradient(90deg, rgba(2,0,.6,1) 0%, rgba(9,9,121,1) 35%, rgba(0, 212, 255, 1) 100%);  */
   display: flex;
+  height: 100vh;
   align-items: center;
   justify-content: center;
+  line-height:1.5;
+  font-size: 30px;
   font-family: 'Raleway', sans-serif;
-  font-size: 10px;
+  /* font-size: 10px; */
   /* padding: 3em 2em; */
   /* font-size: 18px; */
 }
@@ -126,9 +129,11 @@ body{
   align-items: center;
   justify-content: flex-start;
   margin-top: 5%;
+  padding-top: 1rem;
 }
 .button{
   /* background-color: rgba(255,255,255,0.1); */
+
   color: white;
   padding: 3%;
   width: 120px;
@@ -264,27 +269,44 @@ body{
  
   .text{
     /* padding: 20px; */
+    margin-top: 2rem;
     flex:1;
-    line-height: 0em;
+    line-height: 0.4em;
+    
   }
   .t{
     font-size: medium;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   }
   #skills{
-    /* height: 100vh; */
-    background-color: white;
+    height: 100vh;
     width: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     /* padding: 40px; */
     color: black;
-    /* justify-content: flex-start;
-    align-items: flex-start; */
+    justify-content: space-between;
+    align-items: center;
   }
   .row{
+    /* height: 30%; */
     display: flex;
-    flex-direction: row
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
+  .circle-progress-value {
+    stroke-width: 6px;
+    stroke: hsl(280, 90%, 50%);
+    stroke-linecap: round;
+  }
+  .circle-progress-circle {
+    stroke-width: 2px;
+  }
+
+  .circle-progress-text {
+    font-weight: bold;
+    font-size: 20px;
   }
   .web{
     flex: 1;
@@ -306,12 +328,19 @@ body{
     justify-content: center;
     align-items: center;
   }
+  .pro{
+    background: transparent;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
   #projects{
     /* height: 100vh; */
     /* background-color: rgba(0, 212, 255, 1);  */
     display: flex;
     padding-top: 50px; 
-    padding: 40px;
+    /* padding: 40px; */
     color: black; 
     justify-content: center;
     align-items: center;
@@ -362,9 +391,8 @@ body{
   
   @media screen and (max-width: 600px) {
     .wrapper2{
-      /* height: 100vh;
-      width: 100vw; */
-      font-size: 10px;
+      /* width: 100vw; */ 
+      font-size: 25px;
       display: flex;
       align-items: flex-start;
       /* background-color: chocolate; */
