--- a/style.css
+++ b/style.css
@@ -279,7 +279,7 @@ body{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   }
   #skills{
-    height: 100vh;
+    /* height: 100vh; */
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -294,6 +294,7 @@ body{
     width: 100%;
     flex-direction: row;
     justify-content: space-evenly;
+    margin-bottom: 2%;
   }
   .circle-progress-value {
     stroke-width: 6px;
@@ -430,9 +431,9 @@ body{
     .card-columns {
       column-count: 1;
     }
-    #projects{
+    /* #projects{
       margin-top: 50px;
-    }
+    } */
   }
   
  
